# sourDough

./: .gitignore  CHANGELOG.md  COMPLETE_SESSION_WRAP_UP_JAN_19_2026.md  COMPREHENSIVE_AUDIT_JAN_19_2026.md  CONVENTIONS.md  Cargo.toml  DEVELOPMENT.md  ECOBIN_CERTIFICATION.md  EXECUTIVE_SUMMARY_JAN_19_2026.md  GENOMEBIN_FIX_AND_CREATION_JAN_19_2026.md  HARVEST_SUMMARY_JAN_19_2026.md  LICENSE  README.md  SESSION_SUMMARY_JAN_19_2026.md  START_HERE.md  STATUS.md  WHATS_NEXT.md  clippy.toml  deny.toml
.github/workflows/: ci.yml
archive/: ACTION_ITEMS_JAN_19_2026.md  CLEANUP_SUMMARY_JAN_19_2026.md  COMPLETION_SUMMARY_JAN_19_2026.md  COMPREHENSIVE_REVIEW_JAN_19_2026.md  ECOBIN_CERTIFICATION_JAN_19_2026.md  EXECUTION_SUMMARY_JAN_19_2026.md  FINAL_STATUS_JAN_19_2026.md  GENOMEBIN_FIX_AND_CREATION_JAN_19_2026.md  GENOMEBIN_RUST_EVOLUTION_PLAN.md  GENOMEBIN_RUST_IMPLEMENTATION_COMPLETE.md  GENOMEBIN_VALIDATION_RESULTS_JAN_19_2026.md  HARVEST_SUMMARY_JAN_19_2026.md
archive/genomebin_bash_JAN19_2026/config/environments/: development.toml  production.toml
archive/genomebin_bash_JAN19_2026/output/: beardog-0.9.0-genomebin.tar.gz.sha256  sourdough-0.1.0-genomebin.tar.gz.sha256
archive/genomebin_bash_JAN19_2026/scripts/: create-genomebin.sh
archive/genomebin_bash_JAN19_2026/services/: launchd.plist.tmpl
archive/genomebin_bash_JAN19_2026/wrapper/: system-detection.sh
crates/sourdough/: Cargo.toml
crates/sourdough-core/: Cargo.toml
crates/sourdough-core/src/: config.rs  discovery.rs  error.rs  health.rs  identity.rs  ipc.rs  lib.rs  lifecycle.rs  rpc.rs  transport.rs  types.rs
crates/sourdough-genomebin/: Cargo.toml  README.md
crates/sourdough-genomebin/examples/: create_and_validate.rs  platform_detection.rs
crates/sourdough-genomebin/src/: archive.rs  builder.rs  error.rs  lib.rs  metadata.rs  platform.rs  signing.rs  validator.rs
crates/sourdough/src/: main.rs
crates/sourdough/src/commands/: doctor.rs  genomebin.rs  mod.rs  scaffold.rs  validate.rs
crates/sourdough/src/commands/scaffold/: generators.rs  mod.rs  templates.rs
crates/sourdough/src/commands/scaffold/templates/: core.rs  infra.rs  mod.rs  server.rs
crates/sourdough/tests/: cli_integration.rs  e2e_scaffold_lifecycle.rs
genomebin/: README.md
genomebin/config/: config-template.toml
genomebin/config/environments/: embedded.toml  production.toml
genomebin/scripts/: sign-genomebin.sh  test-genomebin.sh
genomebin/services/: rc.d.tmpl  systemd.service.tmpl
genomebin/wrapper/: genome-wrapper.sh
scripts/: scaffold.sh
specs/: ARCHITECTURE.md  EPHEMERAL_PRIMAL_SCAFFOLDING.md  ROADMAP.md  SOURDOUGH_SPECIFICATION.md  SPEC_TEMPLATE.md
tests/e2e/: rpc_communication.rs
