[workspace]
resolver = "2"
members = [
    "crates/sourdough-core",
    "crates/sourdough",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
repository = "https://github.com/ecoPrimals/sourDough"
authors = ["ecoPrimals Project"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Cryptography (BearDog integration)
# Note: Actual crypto comes from BearDog, these are for types
ed25519-dalek = "2.1"
blake3 = "1.5"

# Configuration
config = "0.14"

# RPC
tarpc = { version = "0.34", features = ["tokio1", "serde1", "serde-transport"] }
futures = "0.3"
bytes = "1.11"
serde_bytes = "0.11"
tokio-util = { version = "0.7", features = ["codec"] }
tokio-serde = { version = "0.8", features = ["bincode"] }
bincode = "1.3"


