[workspace]
resolver = "2"
members = [
    "crates/sourdough",
    "crates/sourdough-core",
    "crates/sourdough-genomebin",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/ecoPrimals/sourDough"
authors = ["ecoPrimals Project"]

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
unreachable_pub = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

[profile.release]
lto = true
codegen-units = 1
strip = true

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Cryptography
blake3 = "1.5"

# RPC
tarpc = { version = "0.34", features = ["tokio1", "serde1", "serde-transport"] }
bytes = { version = "1.11", features = ["serde"] }
serde_bytes = "0.11"
tokio-util = { version = "0.7", features = ["codec"] }
tokio-serde = { version = "0.8", features = ["bincode"] }
bincode = "1.3"

# Genome bin (archives, paths, testing)
tar = "0.4"
flate2 = "1.0"
sha2 = "0.10"
camino = "1.1"
tempfile = "3.13"
chrono = { version = "0.4.43", features = ["serde"] }
proptest = "1.6"
