[package]
name = "sourdough-genomebin"
version = "0.1.0"
edition = "2024"
authors = ["ecoPrimals Team"]
description = "Pure Rust genomeBin infrastructure - type-safe, concurrent, universal deployment"
license = "AGPL-3.0-or-later"
repository = "https://github.com/ecoPrimals/sourDough"

[dependencies]
# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Archive operations - Pure Rust!
tar = { workspace = true }
flate2 = { workspace = true }

# Hashing - Pure Rust!
blake3 = { workspace = true }
sha2 = { workspace = true }

# Zero-copy
bytes = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Path operations
camino = { workspace = true }

# Temp directories
tempfile = { workspace = true }

chrono = { workspace = true }

# NOTE: GPG signing removed for now (gpgme has C dependencies)
# Future: Add Pure Rust signing via sequoia-openpgp

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = "0.4"
proptest = { workspace = true }

[features]
default = []

[lib]
doctest = true
