[package]
name = "sourdough-genomebin"
description = "Pure Rust genomeBin infrastructure - type-safe, concurrent, universal deployment"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Archive operations - Pure Rust!
tar = { workspace = true }
flate2 = { workspace = true }

# Hashing - Pure Rust!
blake3 = { workspace = true }
sha2 = { workspace = true }

# Zero-copy
bytes = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Path operations
camino = { workspace = true }

# Temp directories
tempfile = { workspace = true }

chrono = { workspace = true }

# NOTE: GPG signing removed for now (gpgme has C dependencies)
# Future: Add Pure Rust signing via sequoia-openpgp

[lints]
workspace = true

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = "0.4"
proptest = { workspace = true }

[features]
default = []

[lib]
doctest = true
