[package]
name = "sourdough-genomebin"
description = "Pure Rust genomeBin infrastructure - type-safe, concurrent, universal deployment"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Archive operations - Pure Rust!
tar = { workspace = true }
flate2 = { workspace = true }

# Hashing - Pure Rust!
blake3 = { workspace = true }
sha2 = { workspace = true }

# Signing - Pure Rust Ed25519 (ecoBin-compliant, zero C deps)
ed25519-dalek = { workspace = true }
rand_core = { workspace = true }

# Zero-copy
bytes = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Path operations
camino = { workspace = true }

# Temp directories
tempfile = { workspace = true }

chrono = { workspace = true }


[lints]
workspace = true

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = "0.4"
proptest = { workspace = true }

[features]
default = []

[lib]
doctest = true
