[package]
name = "sourdough"
description = "The reference UniBin for ecoPrimals - tooling and scaffolding platform"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "sourdough"
path = "src/main.rs"

[dependencies]
# Core library
sourdough-core = { path = "../sourdough-core" }

# CLI
clap = { version = "4.5", features = ["derive", "cargo", "wrap_help"] }
colored = "3.0"

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Date/time
chrono = "0.4"
sourdough-genomebin = { version = "0.1.0", path = "../sourdough-genomebin" }

[dev-dependencies]
tempfile = "3.12"
assert_cmd = "2.2"
predicates = "3.1"
tokio-util = { workspace = true, features = ["codec"] }
tokio-serde = { workspace = true, features = ["bincode"] }
bincode = { workspace = true }

